--- a/RestaurantBooking/RestaurantBooking.vcxproj
+++ b/RestaurantBooking/RestaurantBooking.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="schedule.cpp" />
     <ClCompile Include="sms_sender.cpp" />
     <ClCompile Include="test.cpp" />
+    <ClCompile Include="testable_mail_sender.cpp" />
     <ClCompile Include="testable_sms_sender.cpp" />
   </ItemGroup>
   <ItemGroup>
