--- a/RestaurantBooking/RestaurantBooking.vcxproj.filters
+++ b/RestaurantBooking/RestaurantBooking.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="testable_sms_sender.cpp">
       <Filter>test</Filter>
     </ClCompile>
+    <ClCompile Include="testable_mail_sender.cpp">
+      <Filter>test</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
