--- a/RestaurantBooking/RestaurantBooking.vcxproj.filters
+++ b/RestaurantBooking/RestaurantBooking.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="monday_booking_scheduler.cpp">
       <Filter>test</Filter>
     </ClCompile>
+    <ClCompile Include="testable_booking_scheduler.cpp">
+      <Filter>test</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
